--- a/app/src/main/res/layout/fragment_stack.xml
+++ b/app/src/main/res/layout/fragment_stack.xml
@@ -30,7 +30,7 @@
                     android:layout_margin="10dp"
 
                     android:fontFamily="@font/basic"
-                    android:text="Arrays"
+                    android:text="Stacks Using Arrays"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
@@ -55,116 +55,27 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:fontFamily="@font/basic"
-                    android:text="A doubly linked list is a type of linked list where each node contains two pointers, one pointing to the previous node and one pointing to the next node. This allows for traversal of the list in both directions. Here's an example of what a doubly linked list might look like:"
+                    android:text="A stack is a linear data structure that follows the Last-In-First-Out (LIFO) principle, where the last item added to the stack is the first item to be removed. A stack can be implemented using an array in C. Here's an example of how to implement a stack using an array in C:"
                     android:textAlignment="textStart"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
 
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                android:background="@color/black">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-
-                    android:fontFamily="@font/basic"
-                    android:text="typedef struct node {\n
-    int data;\n
-    struct node *next;\n
-    struct node *prev;\n
-} Node;\n
-
-typedef struct doubly_linked_list {\n
-    Node *head;\n
-    Node *tail;\n
-    int size;\n
-} DoublyLinkedList;\n"
-                    android:textSize="20dp">
-
-                </TextView>
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                android:background="@color/black"/>
-
-
-
-
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
                 android:paddingStart="10dp"
                 android:paddingRight="10dp"
-                android:src="@drawable/doubly">
+                android:src="@drawable/stack">
 
             </ImageView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@drawable/card"
-                android:backgroundTint="#6F9A9999"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:fontFamily="@font/basic"
-                    android:text="C Program for Doubly Linked List"
-                    android:textAlignment="center"
-
-
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@drawable/card"
-                android:backgroundTint="#6F9A9999"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:fontFamily="@font/basic"
-                    android:text="In this implementation, the doubly linked list is defined using a structure that contains a head pointer, a tail pointer, and a size variable. The add_node function adds a new node to the end of the list, and the `"
-                    android:textAlignment="textStart"
-
-
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
 
                 android:background="@color/black">
-
 
                 <TextView
                     android:layout_width="match_parent"
@@ -172,266 +83,95 @@ typedef struct doubly_linked_list {\n
                     android:layout_margin="10dp"
 
                     android:fontFamily="@font/basic"
-                    android:text="void initialize_list(DoublyLinkedList *list) {
-    list->head = NULL;\n\n
-    list->tail = NULL;\n
-    list->size = 0;\n
-}
+                    android:text="#define MAX_SIZE 100\n
+typedef struct stack {\n
+    int top;\n
+    int data[MAX_SIZE];\n
+}\n Stack;\n
 
-int main() {
-    DoublyLinkedList list;\n
-    initialize_list(list);\n
-    add_node(list, 1);\n
-    add_node(list, 2);\n
-    add_node(list, 3);\n
-    add_node(list, 4);\n
-    add_node(list, 5);\n
-    printf(“Initial list: “);\n
-    print_list(list);\n
-    remove_node(list, 3);\n
-    printf(“List after removing node with data 3: “);\n
-                print_list(list);\n
+void initialize(Stack *stack) {\n
+    stack->top = -1;\n
+}\n
+
+int is_empty(Stack *stack) {\n
+    return stack->top == -1;\n
+}\n
+
+int is_full(Stack *stack) {\n
+    return stack->top == MAX_SIZE - 1;\n
+}\n
+
+void push(Stack *stack, int element) {\n
+    if (is_full(stack)) {\n
+        printf(“Stack overflow.“);\n
+                return;\n
+                }\n
+                stack->top++;\n
+    stack->data[stack->top] = element;\n
+                }\n
+
+                int pop(Stack *stack) {\n
+                if (is_empty(stack)) {\n
+                printf(“Stack underflow.“);\n
+                return -1;\n
+                }\n
+   int element = stack->data[stack->top];\n
+                stack->top--;\n
+                return element;\n
+                }\n
+
+                void print_stack(Stack *stack) {\n
+                if (is_empty(stack)) {\n
+                printf(“Stack is empty.“);\n
+                return;\n
+                }\n
+                printf(“Stack: “);\n
+     for (int i = stack->top;\n i >= 0;\n i--) {\n
+                printf(“%d “, stack->data[i]);\n
+                }\n
+                printf(“\n“);\n
+                }\n
+
+                int main() {\n
+                Stack stack;\n
+                initialize(stack);\n
+                push(stack, 1);\n
+                push(stack, 2);\n
+                push(stack, 3);\n
+                print_stack(stack);\n
+                pop(stack);\n
+                print_stack(stack);\n
                 return 0;\n
-                }
-                "
-                    android:textSize="20dp">
-
-                </TextView>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@drawable/card"
-                android:backgroundTint="#6F9A9999"
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:fontFamily="@font/basic"
-                    android:text="Insertions"
-
-                    android:textAlignment="center"
-
-
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                android:background="@color/black">
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-
-                    android:fontFamily="@font/basic"
-                    android:text="void insertStart (struct Node **head, int data)
-{
-  struct Node *newNode = (struct Node *) malloc (sizeof (struct Node));\n
-  newNode->data = data;\n
-  newNode->next = *head;\n
-  newNode->prev = NULL;\n
-  if (*head != NULL)
-    (*head)->prev = newNode;\n
-  *head = newNode;\n
-}\n
-void insertStart (struct Node **head, int data)\n
-{\n
-  struct Node *newNode = (struct Node *) malloc (sizeof (struct Node));\n
-  newNode->data = data;\n
-  newNode->next = *head;\n
-  newNode->prev = NULL;\n
-  if (*head != NULL)\n
-    (*head)->prev = newNode;\n
-  *head = newNode;\n
-}\n
-void insertPosition (int pos, int data, struct Node **head)\n
-{\n
-  int size = calcSize (*head);\n
-  if (pos less than 1 || size less than pos)\n
-    {\n
-      printf (“Can't insert, %d is not a valid position\n“, pos);\n
-    }\n
-  else\n
-    {\n
-      struct Node *temp = *head;\n
-      struct Node *newNode = (struct Node *) malloc (sizeof (struct Node));\n
-
-      newNode->data = data;\n
-      newNode->next = NULL;\n
-      while (--pos)\n
-	{\n
-	  temp = temp->next;\n
-	}\n
-      newNode->next = temp->next;\n
-      newNode->prev = temp;\n
-      temp->next = newNode;\n
-    }\n
-}\n
-"
-                    android:textSize="20dp">
-
-                </TextView>
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@drawable/card"
-                android:backgroundTint="#6F9A9999"
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:fontFamily="@font/basic"
-                    android:text="Deletion"
-
-                    android:textAlignment="center"
-
-
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                android:background="@color/black">
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-
-                    android:fontFamily="@font/basic"
-                    android:text="void deleteFirst()\n
-{\n
-    struct node* temp\n
-    if (start == NULL)\n
-        printf(“List is empty“)\n
-                else {\n
-                temp = start\n
-                start = start->next\n
-                if (start != NULL)\n
-                start->prev = NULL\n
-                free(temp)\n\n
-                }}\n
-                void deleteEnd()\n
-                {\n
-                struct node* temp\n
-                if (start == NULL)\n
-                printf(“List is empty“)\n\n
-                temp = start\n
-                while (temp->next != NULL)\n
-                temp = temp->next\n
-                if (start->next == NULL)\n
-                start = NULL\n
-                else {\n
-                temp->prev->next = NULL\n
-                free(temp)\n
-                }}\n
-                void deletePosition()\n
-                {\n
-                int pos, i = 1\n
-                struct node *temp, *position\n
-                temp = start\n
-                if (start == NULL)\n
-                printf(“List is empty“)\n\n
-
-                else {\n
-                printf(“\nEnter position : “)\n\n
-                scanf(“%d“, pos)\n\n
-
-                if (pos == 1)\n {\n
-                deleteFirst()\n
-                start->prev = NULL\n
-                }\n
-                free(position)\n\n
-                return\n
-                }\n
-                while (i less than pos - 1)\n {\n
-                temp = temp->next\n
-                i++\n
-                }\n
-                position = temp->next\n
-                if (position->next != NULL)\n
-                position->next->prev = temp\n
-                temp->next = position->next\n
-                free(position)\n\n
-                }\n
                 }\n"
                     android:textSize="20dp">
 
                 </TextView>
+
             </androidx.cardview.widget.CardView>
-
-
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@drawable/card"
                 android:backgroundTint="#6F9A9999"
-
-                >
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="10dp"
-
                     android:fontFamily="@font/basic"
-                    android:text="The advantages of a doubly linked list over a singly linked list are that it allows for traversal of the list in both directions, and it allows for more efficient deletion of a node, as the previous node can be easily updated to point to the next node after deletion. However, a doubly linked list requires more memory than a singly linked list, as each node contains two pointers instead of one."
+                    android:text="In this implementation, the stack is defined using a structure that contains a top variable and an array to hold the data. The initialize function sets the top variable to -1 to indicate that the stack is empty. The is_empty and is_full functions check if the stack is empty or full, respectively. The push function adds an element to the top of the stack, and the pop function removes and returns the element at the top of the stack. The print_stack function prints the elements in the stack from top to bottom.
+
+Note that this implementation uses a fixed-size array, so it can only hold a maximum of MAX_SIZE elements. If you need a stack that can hold an arbitrary number of elements, you could use a dynamic array instead."
                     android:textAlignment="textStart"
                     android:textColor="@color/white"
-                    android:textSize="20dp">
-
-                </TextView>
+                    android:textSize="20dp" />
 
             </androidx.cardview.widget.CardView>
 
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@drawable/card"
-                android:backgroundTint="#6F9A9999"
-                android:baselineAligned="false"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                android:background="@color/black" />
 
         </LinearLayout>
 
